fix spacing in "consider" section

--- a/frontend/src/app/components/module1/Mod1Factor2.module.css
+++ b/frontend/src/app/components/module1/Mod1Factor2.module.css
@@ -1,5 +1,4 @@
 #container {
-  height: auto;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -16,6 +15,5 @@
 }
 
 .chatBubble {
-  width: 100%;
-  max-width: 931px;
+  width: 1000px;
 }
